[package]
name = "shuttle_pro_rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "^0.48", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Foundation",
    "Devices_HumanInterfaceDevice",
] }

windows-targets = { version = "^0.48" }
vlc-rs = "0.3"
lazy_static = "1.4"
#color-eyre = "^0.6"

[dev-dependencies]
#windows-bindgen = { version = "^0.48" }
